--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:IgorDePaula/SdkUI.git"
+    "url": "git@github.com:raposinha-tech/SdkUI.git"
   },
   "dependencies": {
     "core-js": "^3.6.5",
